crates/squawk_linter/src/rules/snapshots/squawk_linter__rules__prefer_text_field__test__adding_column_non_text_err.snap
---
source: crates/squawk_linter/src/rules/prefer_text_field.rs
expression: "lint_errors(sql, Rule::PreferTextField)"
---
error[PreferTextField]: Changing the size of a `varchar` field requires an `ACCESS EXCLUSIVE` lock, that will prevent all reads and writes to the table.
  ╭▸ 
3 │ ALTER TABLE "foo_table" ADD COLUMN "foo_column" varchar(256) NULL;
  │                                                 ━━━━━━━━━━━━
  │
  ├ help: Use a `TEXT` field with a `CHECK` constraint.
  ╭╴
3 - ALTER TABLE "foo_table" ADD COLUMN "foo_column" varchar(256) NULL;
3 + ALTER TABLE "foo_table" ADD COLUMN "foo_column" text NULL;
  ╰╴
