crates/squawk_linter/src/rules/snapshots/squawk_linter__rules__prefer_text_field__test__create_table_with_pgcatalog_varchar_err.snap
---
source: crates/squawk_linter/src/rules/prefer_text_field.rs
expression: errors
---
[
    Violation {
        code: PreferTextField,
        message: "Changing the size of a `varchar` field requires an `ACCESS EXCLUSIVE` lock, that will prevent all reads and writes to the table.",
        text_range: 69..92,
        messages: [],
    },
]
